--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,5 +4,5 @@ description: "The main plugin for Brawl, a kit based pvp gamemode on Minebo."
 authors: ["Ian Rich"]
 website: "https://github.com/MineboMC/Brawl"
 main: net.minebo.brawl.Brawl
-soft-depend: ["kRegions", "Basalt"]
+soft-depend: ["kRegions", "KoTH", "Basalt"]
 api-version: '1.20'
